--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Rahul Kumar personal Portfolio. I am a software developer from Patna, India. I work at Shwastik Tech Solutions Pvt Ltd and also as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Rahul Kumar | Portfolio</title>
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>S0umyajit | Portfolio</title>
-  <meta name="description" content="Self Developed personal website build with React.js">
+    <!-- General Meta Tags -->
+    <meta
+      name="keywords"
+      content="Rahul Kumar, software developer, Patna, freelancer, web development, mobile app development, desktop app development"
+    />
+    <meta name="author" content="Rahul Kumar" />
 
-  <!-- Google / Search Engine Tags -->
-  <meta itemprop="name" content="S0umyajit | Portfolio">
-  <meta itemprop="description" content="Self Developed personal website build with React.js">
-  <meta itemprop="image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Rahul Kumar | Portfolio" />
+    <meta
+      itemprop="description"
+      content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <meta
+      itemprop="image"
+      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+    />
 
-  <!-- Facebook Meta Tags -->
-  <meta property="og:url" content="https://soumyajit.vercel.app">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="S0umyajit | Portfolio">
-  <meta property="og:description" content="Self Developed personal website build with React.js">
-  <meta property="og:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://rahulkumar.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Rahul Kumar | Portfolio" />
+    <meta
+      property="og:description"
+      content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
-  <!-- Twitter Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="S0umyajit | Portfolio">
-  <meta name="twitter:description" content="Self Developed personal website build with React.js">
-  <meta name="twitter:image"
-    content="https://raw.githubusercontent.com/soumyajit4419/Portfolio/master/Images/readme-img.png?token=AK7VCIF5RYEUZZAURELPTAC76U6AK">
-</head>
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://rahulkumar.vercel.app" />
+    <meta name="twitter:title" content="Rahul Kumar | Portfolio" />
+    <meta
+      name="twitter:description"
+      content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+    />
 
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
+    <!-- WhatsApp Meta Tags -->
+    <meta
+      property="og:image"
+      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+    />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Rahul Kumar",
+        "url": "https://rahulkumar.vercel.app",
+        "image": "https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true",
+        "jobTitle": "Software Developer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Shwastik Tech Solutions Pvt Ltd"
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Patna",
+          "addressRegion": "Bihar",
+          "addressCountry": "India"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "contactType": "Personal",
+          "telephone": "+91-9142901293"
+        },
+        "sameAs": [
+          "https://www.linkedin.com/in/kumar-rahul2001",
+          "https://github.com/kumar-rahul2001",
+          "https://twitter.com/itstherealrahul"
+        ]
+      }
+    </script>
+  </head>
+
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
