Added whatsapp button

--- a/public/index.html
+++ b/public/index.html
@@ -27,11 +27,11 @@
     />
     <meta
       itemprop="image"
-      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://rahulkumar.vercel.app" />
+    <meta property="og:url" content="https://rahulatwork.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Rahul Kumar | Portfolio" />
     <meta
@@ -40,14 +40,14 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://rahulkumar.vercel.app" />
+    <meta name="twitter:url" content="https://rahulatwork.vercel.app/" />
     <meta name="twitter:title" content="Rahul Kumar | Portfolio" />
     <meta
       name="twitter:description"
@@ -55,13 +55,13 @@
     />
     <meta
       name="twitter:image"
-      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
     />
 
     <!-- WhatsApp Meta Tags -->
     <meta
       property="og:image"
-      content="https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -72,8 +72,8 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Rahul Kumar",
-        "url": "https://rahulkumar.vercel.app",
-        "image": "https://github.com/kumar-rahul2001/studoc-frontend/blob/master/public/images/backgrounds/blog-bg2-2x.jpg?raw=true",
+        "url": "https://rahulatwork.vercel.app/",
+        "image": "https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW",
         "jobTitle": "Software Developer",
         "worksFor": {
           "@type": "Organization",
