Improved SEO for social media

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Rahul Kumar personal Portfolio. I am a software developer from Patna, India. I work at Shwastik Tech Solutions Pvt Ltd and also as a freelancer. Contact for Web, Mobile & Desktop App development."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Rahul Kumar | Portfolio</title>
+    <title>Rahul Kumar | Software Developer Portfolio</title>
 
     <!-- General Meta Tags -->
     <meta
@@ -20,27 +20,33 @@
     <meta name="author" content="Rahul Kumar" />
 
     <!-- Google / Search Engine Tags -->
-    <meta itemprop="name" content="Rahul Kumar | Portfolio" />
+    <meta
+      itemprop="name"
+      content="Rahul Kumar | Software Developer Portfolio"
+    />
     <meta
       itemprop="description"
       content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
     />
     <meta
       itemprop="image"
-      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
     />
 
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://rahulatwork.vercel.app/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Rahul Kumar | Portfolio" />
+    <meta
+      property="og:title"
+      content="Rahul Kumar | Software Developer Portfolio"
+    />
     <meta
       property="og:description"
       content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
     />
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -48,20 +54,52 @@
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://rahulatwork.vercel.app/" />
-    <meta name="twitter:title" content="Rahul Kumar | Portfolio" />
+    <meta
+      name="twitter:title"
+      content="Rahul Kumar | Software Developer Portfolio"
+    />
     <meta
       name="twitter:description"
       content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
     />
     <meta
       name="twitter:image"
-      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
+    />
+
+    <!-- LinkedIn Meta Tags -->
+    <meta property="og:url" content="https://rahulatwork.vercel.app/" />
+    <meta
+      property="og:title"
+      content="Rahul Kumar | Software Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
+    />
+
+    <!-- Instagram Meta Tags -->
+    <meta
+      property="og:title"
+      content="Rahul Kumar | Software Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="I am Rahul Kumar from Patna, India. I am a software developer currently employed at Shwastik Tech Solutions Pvt Ltd. I also work as a freelancer. Contact for Web, Mobile & Desktop App development."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
     />
 
     <!-- WhatsApp Meta Tags -->
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW"
+      content="https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -73,7 +111,7 @@
         "@type": "Person",
         "name": "Rahul Kumar",
         "url": "https://rahulatwork.vercel.app/",
-        "image": "https://raw.githubusercontent.com/kumar-rahul2001/portfolio/master/Images/portfolio.png?token=GHSAT0AAAAAACSCLR7P2GETQF6P57RLVMEYZT2SW",
+        "image": "https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png",
         "jobTitle": "Software Developer",
         "worksFor": {
           "@type": "Organization",
