--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://rahulatwork.vercel.app/" />
+    <meta property="og:url" content="https://rahul.swastik.ai" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -53,7 +53,7 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://rahulatwork.vercel.app/" />
+    <meta name="twitter:url" content="https://rahul.swastik.ai" />
     <meta
       name="twitter:title"
       content="Rahul Kumar | Software Developer Portfolio"
@@ -68,7 +68,7 @@
     />
 
     <!-- LinkedIn Meta Tags -->
-    <meta property="og:url" content="https://rahulatwork.vercel.app/" />
+    <meta property="og:url" content="https://rahul.swastik.ai" />
     <meta
       property="og:title"
       content="Rahul Kumar | Software Developer Portfolio"
@@ -110,7 +110,7 @@
         "@context": "https://schema.org",
         "@type": "Person",
         "name": "Rahul Kumar",
-        "url": "https://rahulatwork.vercel.app/",
+        "url": "https://rahul.swastik.ai",
         "image": "https://raw.githubusercontent.com/kumar-rahul2001/myportfolio/master/src/assets/images/portfolio/portfolio.png",
         "jobTitle": "Software Developer",
         "worksFor": {
